:lipstick: Set a minimum height for the rent popup to avoid the buttons being cut off

--- a/src/components/map/rent-popup.scss
+++ b/src/components/map/rent-popup.scss
@@ -5,6 +5,7 @@
   padding: 16px;
 
   height: 50vh;
+  min-height: 340px;
   width: 100%;
 
   position: fixed;
